# image_recognition_for_kids_irfk

./: .gitignore  main.py  pyproject.toml  requirements.txt  tflite_runtime-2.5.0-cp37-cp37m-linux_armv6l.whl  try1.py  try2.py
