[project]
name = "image-recognition-for-kids-irfk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pillow>=12.0.0",
    # Use transformers on all platforms - sentencepiece is optional
    "transformers>=4.57.1",
    # Only install torch on supported platforms
    "torch>=2.9.0; platform_machine == 'x86_64' or platform_machine == 'aarch64'",
    "torchvision>=0.24.0; platform_machine == 'x86_64' or platform_machine == 'aarch64'",
]

[project.optional-dependencies]
# Optional dependencies for development/desktop platforms
full = [
    "torch>=2.9.0",
    "torchvision>=0.24.0",
]